security/allow-nginx-http.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-http
  namespace: nginx-web

spec:
  podSelector:
    matchLabels:
      app: nginx-web

  policyTypes:
    - Ingress

  ingress:
    - ports:
        - protocol: TCP
          port: 80
