security/allow-prometheus-nginx-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-nginx-metrics
  namespace: nginx-web

spec:
  podSelector:
    matchLabels:
      app: nginx-web

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9113
